added image classification using cnn

--- a/Artificial Intelligence/3 cannibal and missinaries/cannibal_missionaries.ipynb
+++ b/Artificial Intelligence/3 cannibal and missinaries/cannibal_missionaries.ipynb
@@ -2,9 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MISSIONARIES AND CANNIBALS\n",
+      "\n",
+      "\n",
+      "\n",
+      " ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0( , )AT  M  M  M  C  C  C \n",
+      "\n",
+      "\n",
+      " ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C,C)AT  M  M  M  C \n",
+      "\n",
+      "\n",
+      " BO(C,C)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ M  M  M  C \n",
+      "\n",
+      "\n",
+      " C  BO(C, )AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ M  M  M  C \n",
+      "\n",
+      "\n",
+      " C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C, )AT  M  M  M  C \n",
+      "\n",
+      "\n",
+      " C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C,C)AT  M  M  M \n",
+      "\n",
+      "\n",
+      " C  BO(C,C)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ M  M  M \n",
+      "\n",
+      "\n",
+      " C  C  BO(C, )AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ M  M  M \n",
+      "\n",
+      "\n",
+      " C  C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C, )AT  M  M  M \n",
+      "\n",
+      "\n",
+      " C  C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(M,M)AT  M  C \n",
+      "\n",
+      "\n",
+      " C  C  BO(M,M)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ M  C \n",
+      "\n",
+      "\n",
+      " M  C  BO(C,M)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ M  C \n",
+      "\n",
+      "\n",
+      " M  C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C,M)AT  M  C \n",
+      "\n",
+      "\n",
+      " M  C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(M,M)AT  C  C \n",
+      "\n",
+      "\n",
+      " M  C  BO(M,M)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ C  C \n",
+      "\n",
+      "\n",
+      " M  M  M  BO(C, )AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ C  C \n",
+      "\n",
+      "\n",
+      " M  M  M  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C, )AT  C  C \n",
+      "\n",
+      "\n",
+      " M  M  M  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C,C)AT  C \n",
+      "\n",
+      "\n",
+      " M  M  M  BO(C,C)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ C \n",
+      "\n",
+      "\n",
+      " M  M  M  C  BO(C, )AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~ C \n",
+      "\n",
+      "\n",
+      " M  M  M  C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C, )AT  C \n",
+      "\n",
+      "\n",
+      " M  M  M  C  ~~~~~~~~~~~~~~WATER~~~~~~~~~~~B0(C,C)AT \n",
+      "\n",
+      "\n",
+      " M  M  M  C  BO(C,C)AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~\n",
+      "\n",
+      "\n",
+      " M  M  M  C  C  C  BO( , )AT~~~~~~~~~~~~~~~WATER~~~~~~~~~~~~~~~~~~\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# AI Assignment 2\n",
     "\n",
@@ -114,8 +197,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
